--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -5,11 +5,11 @@ output: html_document
 
 # 1. Mikes race paper
 
-- [categorical race](/ses/user_wx/2020.7.11_examples.html)
+- [categorical race](/ses-1/user_wx/race_omnibus.html)
 - 1-3 sentence summary (perhaps after discussion).
 
-- [skin color](/ses/user_wx/2020.7.11_examples.html)
+- [skin color](/ses-1/user_wx/2020.7.11_examples.html)
 - 1-3 sentence summary (perhaps after discussion).
 
-- [skin color within race strata](/ses/user_wx/2020.7.11_examples.html)
+- [skin color within race strata](/ses-1/user_wx/2020.7.11_examples.html)
 - 1-3 sentence summary (perhaps after discussion).
